Services/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-getting-started-service
spec:
  selector:
    app: k8s-getting-started
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
